Overhaul of the imports
- Switched to ES6 Syntax
- Cleaned up which module imports what (e.g. the database module is the only one that imports fs now)

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server for Todolist",
   "main": "server.mjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.mjs"
   },
   "author": "",
   "license": "ISC",
